# NerTzh

./: .env.example  .envrc  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  ESTRUCTURA_PARA_JUEZ.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  skills-lock.json
.codex/: project.json
archive/: README.md  refactor_memory.json
config/: regimes.json
context_bridge/: CURRENT_STATE.md  DECISIONS.md  TASK_QUEUE.json  TODO.md  conversation.json
data/: session_2026-07-14_opcion_b.json
docs/: ARCHITECTURE.md  DEMO_RUNBOOK.md  DEVPOST_SUBMISSION.md  HACKATHON_INTEGRATION.md  README.md
logs/: results.json
scripts/: activate_all_skills.sh  bridge.py  check_isolation.sh  check_ready.sh  check_tools.sh  codex_here.sh  extract_system_inventory.py  gpt_here.sh  gpt_session_https.sh  hackathon_smoke.py  mcp_context_bridge.py  mcp_hackathon.py  monitor_sweep.sh  openai_dev_shell.sh  probe_latencies.py  pycharm_fix_root.sh  pycharm_validate.py  run_engine.sh  run_hour_monitor.py  setup_all.sh  setup_pycharm.sh  snapshot_run.py  sweep_matrix.py  uninstall_jetbrains_snaps.sh
skills/: SKILLS_INDEX.md  architectural-analysis  ruflo
src/: agent_routes.py  api_app.py  bybit_mcp_service.py  bybit_v5.py  context_bridge.py  control_access.py  gpt_integration.py  ml_signals.py  models.py  nertzh.py  observability.py  qwen_integration.py  regime_config.py  settings.py  utils.py
tests/: test_bybit_payloads.py  test_control_access.py  test_demo_surface.py  test_market_persistence_throttle.py  test_market_window.py  test_regime_config.py  (+4 more)
(+91 files in other folders)
