[project]
name = "metrics"
version = "0.1.0"
description = "NertzMetalEngine — Bybit spot metrics engine (OpenAI Build Week)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.139.0",
    "numpy>=2.5.1",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.51.0",
    "websockets>=16.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = false
