[project]
name = "metrics"
version = "0.1.0"
description = "NertzMetalEngine — Bybit spot metrics engine (OpenAI Build Week)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "asyncpg>=0.30.0",
    "duckdb>=1.5.4",
    "fastapi>=0.139.0",
    "langfuse>=4.14.0",
    "mcp>=1.28.1",
    "numpy>=2.5.1",
    "openai>=1.53.0",
    "prometheus-client>=0.25.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.51.0",
    "websockets>=16.1",
    "xgboost>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = false
